--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       property="og:description"
       content="Jalen M. Alborilla, Official Website"
     />
-    <meta property="og:image" content="https://jalen-alborilla.ga/jalen.webp" />
+    <meta property="og:image" content="https://jalen-alborilla.ga/IMG_20220831_180538.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary" />
