--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
       property="og:description"
       content="Jalen M. Alborilla, Official Website"
     />
-    <meta property="og:image" content="https://jalen-alborilla.ga/IMG_20220831_180538.jpg" />
+    <meta property="og:image" content="https://jalenalborilla.ga/jalen.webp" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary" />
-    <meta property="twitter:url" content="https://jalen-alborilla.ga/" />
+    <meta property="twitter:url" content="https://jalenalborilla.ga/" />
     <meta property="twitter:title" content="Jalen" />
     <meta
       property="twitter:description"
@@ -45,7 +45,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://jalen-alborilla.ga/jalen.webp"
+      content="https://jalenalborilla.ga/jalen.webp"
     />
 
     <script type="application/ld+json">
@@ -53,10 +53,10 @@
         "@context": "http://schema.org/",
         "@type": "Person",
         "name": "Jalen M. Alborilla",
-        "image": "https://jalen-alborilla.ga/jalen.webp",
+        "image": "https://jalenalborilla.ga/jalen.webp",
         "jobTitle": "Software Developer",
-        "email": "mailto:contact@jalen-alborilla.ga",
-        "url": "https://jalen-alborilla.ga/",
+        "email": "mailto:contact@jalenalborilla.ga",
+        "url": "https://jalenalborilla.ga/",
         "homeLocation": {
           "@type": "Place",
           "name": "Jordan, Guimaras, Philippines."
