--- a/index.html
+++ b/index.html
@@ -227,13 +227,8 @@
       </div>
 
       <h1>Jalen M. Alborilla</h1>
-      <p>
-        A Information Technology Student. I know php, html, css and some
-        javaScript. I also know some Python and Java. I want to make career in
-        Web Development.
-      </p>
-      <!--p class="mb-0">Hi!. <br> Ako nga pala si Jalen na </p>
-      <p> Mahal na Mahal ka.</p-->
+      <p class="mb-0">Hi!.<br>I'm Information Technologist graduate. I know basic html, css and java.</p>
+     
       <p>Jordan, Guimaras, Philippines.</p>
       <br />
       <div class="social-icons">
